add pause and resume on disconnect